# ingway

./: CHANGELOG.md  README.md  ingway.cabal
.github/workflows/: ci.yml  lint.yml
src/: Ingway.hs
src/Ingway/: Parse.hs
src/Ingway/Parse/: Token.hs
