cabal-version: 3.4

name:          ingway
version:       0.1.0.0

synopsis:      The Ingway language compiler
description:   The Ingway language is a functional programming language.

license:       GPL-3.0-or-later
license-file:  LICENSE
author:        Sebastian Tee
maintainer:    SebTee

homepage:      https://github.com/SebTee/ingway
bug-reports:   https://github.com/SebTee/ingway/issues

category:      Language
build-type:    Simple

extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:      git
    location:  https://github.com/SebTee/ingway.git

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Ingway,
        Ingway.Parse,
        Ingway.Parse.Token
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    
        base >=4.17.0.0

executable ingway
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.17.0.0,
        ingway

test-suite ingway-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    build-depends:
        base >=4.17.0.0,
        ingway
